Fix 404 page layout bug

--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -1,9 +1,5 @@
 .not-found {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	min-height: 80vh;
 	padding: 96px + 18px 18px 18px;
 	display: flex;
 	align-items: center;
